@@ -285,6 +285,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #5900: Ensure RUNPATH is added to extension modules with RPATH if GNU 
+  ld is used. Original patch by Floris Bruynooghe.
+
 - Issue #5941: Distutils build_clib command was not working anymore because
   of an incomplete costumization of the archiver command. Added ARFLAGS in the
   Makefile besides AR and make Distutils use it. Original patch by David
